# point-scoring

./: .gitignore  CMakeLists.txt  main.cpp  telefunke.c  temp.txt  withoutFormat.txt
Files/: CMakeLists.txt
Files/headers/: Files.h
Files/src/: CMakeLists.txt  Files.cpp
Game/: CMakeLists.txt
Game/headers/: .Game.h.swp  EscapeColors.h  Game.h
Game/src/: .Game.cpp.swp  CMakeLists.txt  Game.cpp
Input/: CMakeLists.txt
Input/headers/: .Input.h.swp  Input.h
Input/src/: .Input.cpp.swp  CMakeLists.txt  Input.cpp
Player/: CMakeLists.txt
Player/headers/: .Player.h.swp  Player.h
Player/src/: .Player.cpp.swp  CMakeLists.txt  Player.cpp
unit_tests/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  utest
unit_tests/testCases/: .clang-tidy  .testGame.cpp.swp  .testInput.cpp.swp  .testPlayer.cpp.swp  CMakeLists.txt  Makefile  cmake_install.cmake  testGame.cpp  testInput.cpp  testPlayer.cpp
